--- a/fedora-setup.yaml
+++ b/fedora-setup.yaml
@@ -180,6 +180,7 @@
           - unrar
           - vim
           - dejavu-sans-mono-fonts
+          - virt-manager
         state: present
 
     # Install fonts
@@ -247,3 +248,8 @@
         groups: docker
         shell: /usr/bin/fish
         append: yes
+
+    - name: Reboot System
+      debug:
+        msg: 
+          - "Reboot your system and enjoy!"
